<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="email_String"
        android:summary="@string/email_string"
        android:title="@string/titel_email_string"
        />

    <ListPreference
        android:key="update_Dist"
        android:entries="@array/dist_string"
        android:entryValues="@array/dist"
        android:summary="@string/pref_upddist"
        android:title="@string/titel_pref_upddist"
        />

    <EditTextPreference
        android:key="message_Header"
        android:defaultValue="@string/msg_text"
        android:summary="@string/msg_header"
        android:title="@string/titel_msg_header"
        />

    <CheckBoxPreference
        android:key="map_Local"
        android:summary="@string/map_string"
        android:title="@string/titel_map_string"
        />

    <CheckBoxPreference
        android:key="screen_Orientation"
        android:summary="@string/screen_orientation"
        android:title="@string/titel_screen_orientation"
        />

    <CheckBoxPreference
        android:key="show_Toast"
        android:summary="@string/toast_string"
        android:title="@string/titel_toast_string"
        />

</PreferenceScreen>
